welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:11: error: type mismatch;
 found   : Unit
 required: Int
		for(i<-rempli+1 to rempli+S(pos)){
                     ^